# python-json-read-adapter

./: Cargo.toml  LICENSE  README.md
examples/: cli.rs
src/: lib.rs  serde_impl.rs
