[package]
name = "python-json-read-adapter"
version = "0.1.0"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
edition = "2018"

[dependencies]
serde_json = { version = "1.0.33", optional = true }
serde_self = { version = "1.0.82", optional = true, package = "serde" }

[features]
serde = ["serde_self", "serde_json"]
